src/test/ui/consts/async-block.with_feature.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/async-block.rs:19:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

